test/fail_compilation/fail229.d
// bug1936     init.c
// Error: array dimension overflow
static int[] x = [-1: 1];
